--- a/full/CMakeLists.txt
+++ b/full/CMakeLists.txt
@@ -139,7 +139,7 @@ if (ADD_TARGET_DEFINITIONS)
     ADD_TARGET_DEFINITIONS(visit_vtk "${VTK_DEFINITIONS}")
 endif()
 
-if (ADD_TARGET_DEFINITIONS)
+if (VISIT_INSTALL_TARGETS)
     VISIT_INSTALL_TARGETS(visit_vtk)
 else()
     install(TARGETS visit_vtk DESTINATION lib)
